--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+    <link rel='stylesheet' href='/stylesheets/style.css'/>
+</head>
+<body>
+<h1><%= title %></h1>
+
+<p>Welcome to <%= title %></p>
+
+<h3>Users</h3>
+<table>
+    <% for(var key in data) { %>
+    <tr>
+        <td><%= key %></td>
+        <td><%= data[key] %></td>
+    </tr>
+    <% } %>
+</table>
+
+<h3>Github API</h3>
+<table>
+    <% for(var key in github) { %>
+    <tr>
+        <td><%= key %></td>
+        <td><%= github[key] %></td>
+    </tr>
+    <% } %>
+</table>
+</body>
 </html>
