--- a/views/movie/view.ejs
+++ b/views/movie/view.ejs
@@ -9,6 +9,7 @@
 
 <a href="/movie/">Back</a>
 <a href="/movie/<%= movie.id %>/edit">Edit</a>
+<a href="/movie/<%= movie.id %>/del">Delete</a>
 
 <dl>
     <dt>名前</dt>
