--- a/public/stylus/app.styl
+++ b/public/stylus/app.styl
@@ -3,5 +3,12 @@
 @import "foundation/utility"
 @import "foundation/base"
 
-body
-	width 100px
+h1
+	background #000
+	color #fff
+	padding 10px 6px
+	font-size 20px
+table
+	th,td
+		padding 6px
+		border 1px solid #ddd
