--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,4 +1,20 @@
-<head>
-  <title><%= title %></title>
-  <link rel='stylesheet' href='/css/app.css'/>
-</head>
+<link rel="stylesheet" href="/css/css/style.css">
+<style>
+  .app {
+    color: #333;
+  }
+  .logo {
+    font-family: 'Raleway', sans-serif;
+  }
+</style>
+<script src="./js/jquery-2.1.4.js"></script>
+<script src="./js/bootstrap.js"></script>
+<script>
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+ga('create', 'UA-XXXXX-Y', 'auto');
+ga('send', 'pageview');
+</script>
