--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/css/style.css">
+<link rel="stylesheet" href="/css/style.css">
 <style>
   .app {
     color: #333;
