--- a/views/user/view.ejs
+++ b/views/user/view.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
-    <title>ユーザー: Us000000のページ</title>
+    <title>ユーザー: <%= user.userId%> のページ</title>
   <% include ../_header %>
 </head>
 <body>
@@ -18,7 +18,7 @@
   <ol class="breadcrumb" style="background-color: rgba(1, 1, 1, .05);">
     <li><a href="#">Home</a></li>
     <li><a href="#">Users</a></li>
-    <li class="active">Us000000</li>
+    <li class="active"><%= user.userId%></li>
   </ol>
 
   <!-- container -->
@@ -27,11 +27,11 @@
     <!-- User Info -->
     <div class="row p-a-md">
       <div class="text-center col-xs-6">
-        <img src="/img/user/Us000000.png" class="img-circle" width="100" height="100" alt="Us000000のサムネイル画像">
+        <img src="/img/user/<%= user.userImage %>" class="img-circle" width="100" height="100" alt="<%= user.userImage %>のサムネイル画像">
       </div>
       <div class="col-xs-6">
-        <p>Us000000</p>
-        <p>スコア: 87</p>
+        <p><%= user.userId%></p>
+        <p>スコア: <%= user.userPublicScore %></p>
       </div>
     </div>
     <div class="m-b-md">
@@ -41,28 +41,27 @@
 
   <!-- Friends -->
   <div class="friends">
-    <h5 class="p-a">フレンド <span class="label label-pill label-default">4</span></h5>
+    <h5 class="p-a">フレンド <span class="label label-pill label-default"><%= user.userFriendsNumber %></span></h5>
     <div class="list-group">
-      <button type="button" class="list-group-item">
-        <a href="#" style="color: #333;">
-          <img src="/img/user/Us000001.png" alt="Us000001のサムネイル画像" class="img-circle m-r" width="24" height="24">Us000001
-        </a>
-      </button>
-      <button type="button" class="list-group-item">
-        <a href="#" style="color: #333;">
-          <img src="/img/user/Us000002.png" alt="Us000002のサムネイル画像" class="img-circle m-r" width="24" height="24">Us000002
-        </a>
-      </button>
-      <button type="button" class="list-group-item">
-        <a href="#" style="color: #333;">
-          <img src="/img/user/Us000003.png" alt="Us000003のサムネイル画像" class="img-circle m-r" width="24" height="24">Us000003
-        </a>
-      </button>
-      <button type="button" class="list-group-item">
-        <div class="text-right">
-          <a href="#">もっと見る</a>
-        </div>
-      </button>
+  
+      <% user.userFriends.forEach(function(userFriends,i) { %>
+        <%if (i < 3) { %>
+          <button type="button" class="list-group-item">
+            <a href="#" style="color: #333;">
+              <img src="/img/user/<%= userFriends %>.png" alt="<%= userFriends %>のサムネイル画像" class="img-circle m-r" width="24" height="24"><%= userFriends %>
+            </a>
+          </button>
+        <% } %>
+      <% }) %>
+
+      <% if (user.userFriendsNumber > 3) { %>
+        <button type="button" class="list-group-item">
+          <div class="text-right">
+            <a href="#">もっと見る</a>
+          </div>
+        </button>
+      <% } %>
+
     </div>
   </div>
 
