--- a/public/stylesheets/bootstrap.css
+++ b/public/stylesheets/bootstrap.css
@@ -18,8 +18,7 @@ body {
 
 footer,
 header,
-nav,
-section{
+nav{
   display: block;
 }
 
@@ -766,20 +765,6 @@ fieldset[disabled] a.btn {
 
 .c-inputs-stacked .c-input + .c-input {
   margin-left: 0;
-}
-
-.file {
-  position: relative;
-  display: inline-block;
-  height: 2.5rem;
-  cursor: pointer;
-}
-
-.file input {
-  min-width: 14rem;
-  margin: 0;
-  filter: alpha(opacity=0);
-  opacity: 0;
 }
 
 .nav {
