--- a/public/stylesheets/bootstrap.css
+++ b/public/stylesheets/bootstrap.css
@@ -8,7 +8,7 @@
 /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
 html {
   font-family: sans-serif;
-  -webkit-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%; 
       -ms-text-size-adjust: 100%;
 }
 
@@ -368,130 +368,45 @@ fieldset[disabled] a.btn {
   pointer-events: none;
 }
 
-.btn-primary {
+.btn-1 {
   color: #fff;
   background-color: #0275d8;
   border-color: #0275d8;
 }
 
-.btn-primary:focus,
-.btn-primary.focus,
-.btn-primary:active,
-.btn-primary.active,
-.open > .btn-primary.dropdown-toggle {
+.btn-1:focus,
+.btn-1.focus,
+.btn-1:active,
+.btn-1.active{
   color: #fff;
   background-color: #025aa5;
   border-color: #01549b;
 }
 
-.btn-primary:hover {
+.btn-1:hover {
   color: #fff;
   background-color: #025aa5;
   border-color: #01549b;
 }
 
-.btn-primary:active,
-.btn-primary.active,
-.open > .btn-primary.dropdown-toggle {
+.btn-1:active,
+.btn-1.active,
+.open > .btn-1.dropdown-toggle {
   background-image: none;
 }
 
-.btn-primary.disabled:focus,
-.btn-primary.disabled.focus,
-.btn-primary:disabled:focus,
-.btn-primary:disabled.focus{
+.btn-1.disabled:focus,
+.btn-1.disabled.focus,
+.btn-1:disabled:focus,
+.btn-1:disabled.focus{
   background-color: #0275d8;
   border-color: #0275d8;
 }
 
-.btn-primary.disabled:hover,
-.btn-primary:disabled:hover{
+.btn-1.disabled:hover,
+.btn-1:disabled:hover{
   background-color: #0275d8;
   border-color: #0275d8;
-}
-
-.btn-secondary {
-  color: #373a3c;
-  background-color: #fff;
-  border-color: #ccc;
-}
-
-.btn-secondary:focus,
-.btn-secondary.focus,
-.btn-secondary:active,
-.btn-secondary.active,
-.open > .btn-secondary.dropdown-toggle {
-  color: #373a3c;
-  background-color: #e6e6e6;
-  border-color: #adadad;
-}
-
-.btn-secondary:hover {
-  color: #373a3c;
-  background-color: #e6e6e6;
-  border-color: #adadad;
-}
-
-.btn-secondary:active,
-.btn-secondary.active,
-.open > .btn-secondary.dropdown-toggle {
-  background-image: none;
-}
-
-.btn-secondary.disabled:focus,
-.btn-secondary.disabled.focus,
-.btn-secondary:disabled:focus,
-.btn-secondary:disabled.focus{
-  background-color: #fff;
-  border-color: #ccc;
-}
-
-.btn-secondary.disabled:hover,
-.btn-secondary:disabled:hover{
-  background-color: #fff;
-  border-color: #ccc;
-}
-
-.btn-info {
-  color: #fff;
-  background-color: #5bc0de;
-  border-color: #5bc0de;
-}
-
-.btn-info:focus,
-.btn-info.focus,
-.btn-info:active,
-.btn-info.active,
-.open > .btn-info.dropdown-toggle {
-  color: #fff;
-  background-color: #31b0d5;
-  border-color: #2aabd2;
-}
-
-.btn-info:hover {
-  color: #fff;
-  background-color: #31b0d5;
-  border-color: #2aabd2;
-}
-
-.btn-info:active,
-.btn-info.active,
-.open > .btn-info.dropdown-toggle {
-  background-image: none;
-}
-
-.btn-info.disabled:focus,
-.btn-info.disabled.focus,
-.btn-info:disabled:focus,
-.btn-info:disabled.focus{
-  background-color: #5bc0de;
-  border-color: #5bc0de;
-}
-
-.btn-info.disabled:hover,
-.btn-info:disabled:hover{
-  background-color: #5bc0de;
-  border-color: #5bc0de;
 }
 
 .btn-success {
@@ -536,122 +451,37 @@ fieldset[disabled] a.btn {
   border-color: #5cb85c;
 }
 
-.btn-warning {
-  color: #fff;
-  background-color: #f0ad4e;
-  border-color: #f0ad4e;
-}
-
-.btn-warning:focus,
-.btn-warning.focus,
-.btn-warning:active,
-.btn-warning.active,
-.open > .btn-warning.dropdown-toggle {
-  color: #fff;
-  background-color: #ec971f;
-  border-color: #eb9316;
-}
-
-.btn-warning:hover {
-  color: #fff;
-  background-color: #ec971f;
-  border-color: #eb9316;
-}
-
-.btn-warning:active,
-.btn-warning.active,
-.open > .btn-warning.dropdown-toggle {
-  background-image: none;
-}
-
-.btn-warning.disabled:focus,
-.btn-warning.disabled.focus,
-.btn-warning:disabled:focus,
-.btn-warning:disabled.focus{
-  background-color: #f0ad4e;
-  border-color: #f0ad4e;
-}
-
-.btn-warning.disabled:hover,
-.btn-warning:disabled:hover{
-  background-color: #f0ad4e;
-  border-color: #f0ad4e;
-}
-
-.btn-danger {
-  color: #fff;
-  background-color: #d9534f;
-  border-color: #d9534f;
-}
-
-.btn-danger:focus,
-.btn-danger.focus,
-.btn-danger:active,
-.btn-danger.active,
-.open > .btn-danger.dropdown-toggle {
-  color: #fff;
-  background-color: #c9302c;
-  border-color: #c12e2a;
-}
-
-.btn-danger:hover {
-  color: #fff;
-  background-color: #c9302c;
-  border-color: #c12e2a;
-}
-
-.btn-danger:active,
-.btn-danger.active,
-.open > .btn-danger.dropdown-toggle {
-  background-image: none;
-}
-
-.btn-danger.disabled:focus,
-.btn-danger.disabled.focus,
-.btn-danger:disabled:focus,
-.btn-danger:disabled.focus{
-  background-color: #d9534f;
-  border-color: #d9534f;
-}
-
-.btn-danger.disabled:hover,
-.btn-danger:disabled:hover{
-  background-color: #d9534f;
-  border-color: #d9534f;
-}
-
-.btn-primary-outline {
+.btn-1-outline {
   color: #0275d8;
   background-color: transparent;
   background-image: none;
   border-color: #0275d8;
 }
 
-.btn-primary-outline:focus,
-.btn-primary-outline.focus,
-.btn-primary-outline:active,
-.btn-primary-outline.active,
-.open > .btn-primary-outline.dropdown-toggle {
+.btn-1-outline:focus,
+.btn-1-outline.focus,
+.btn-1-outline:active,
+.btn-1-outline.active{
   color: #fff;
   background-color: #0275d8;
   border-color: #0275d8;
 }
 
-.btn-primary-outline:hover {
+.btn-1-outline:hover {
   color: #fff;
   background-color: #0275d8;
   border-color: #0275d8;
 }
 
-.btn-primary-outline.disabled:focus,
-.btn-primary-outline.disabled.focus,
-.btn-primary-outline:disabled:focus,
-.btn-primary-outline:disabled.focus{
+.btn-1-outline.disabled:focus,
+.btn-1-outline.disabled.focus,
+.btn-1-outline:disabled:focus,
+.btn-1-outline:disabled.focus{
   border-color: #43a7fd;
 }
 
-.btn-primary-outline.disabled:hover,
-.btn-primary-outline:disabled:hover{
+.btn-1-outline.disabled:hover,
+.btn-1-outline:disabled:hover{
   border-color: #43a7fd;
 }
 
