--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,9 +1,2 @@
 <link rel="stylesheet" href="/css/style.css">
-<style>
-  .app {
-    color: #333;
-  }
-  .logo {
-    font-family: 'Raleway', sans-serif;
-  }
-</style>
+<style>.app {color: #333;}.logo {font-family: 'Raleway', sans-serif;}</style>
