--- a/views/user/view.ejs
+++ b/views/user/view.ejs
@@ -35,7 +35,7 @@
       </div>
     </div>
     <div class="m-b-md">
-      <button type="button" class="btn btn-primary-outline btn-lg btn-block">フレンド申請する</button>
+      <button type="button" class="btn btn-1-outline btn-lg btn-block">フレンド申請する</button>
     </div>
   </div>
 
