--- a/views/item/view.ejs
+++ b/views/item/view.ejs
@@ -41,7 +41,7 @@
         </div>
       </div>
       <div class="m-b-md">
-        <button type="button" class="btn btn-success btn-lg btn-block">この商品を購入する</button>
+        <button type="button" class="btn btn-2 btn-lg btn-block">この商品を購入する</button>
       </div>
     </div>
 
