--- a/views/post/view.ejs
+++ b/views/post/view.ejs
@@ -54,8 +54,8 @@
   <!-- user review -->
   <div class="userReview p-t">
     <blockquote class="blockquote">
-      <p>この商品、いい感じ。</p>
-      <footer>by <img src="/img/user/Us000000.png" alt="Us000000のサムネイル画像" class="img-circle" width="24" height="24" style="vertical-align: bottom;"> Us000000</cite></footer>
+      <p class="blockquote__text">この商品、いい感じ。</p>
+      <footer class="blockquote__footer">by <img src="/img/user/Us000000.png" alt="Us000000のサムネイル画像" class="img-circle" width="24" height="24" style="vertical-align: bottom;"> Us000000</cite></footer>
     </blockquote>
     <!-- review info -->
     <div class="reviewInfo text-muted p-l p-r p-b" style="font-size: 0.8rem;">
